# remindme

./: .env.example  .gitignore  Cargo.toml  README.md  flake.nix
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs  prelude.rs  reminders.rs
crates/migration/: Cargo.toml
crates/migration/src/: m20220101_000001_create_table.rs
crates/remindme/: Cargo.toml
crates/remindme/src/: db.rs  main.rs  responses.rs
