[package]
edition = "2021"
name = "remindme"
version = "0.1.0"

[dependencies]
anyhow = "1.0.81"
config = "0.14.0"
dotenvy = "0.15.7"
entity = { path = "../entity" }
env_logger = "0.11.3"
humantime = "2.1.0"
log = "0.4.21"
migration = { path = "../migration" }
nostr-sdk = "0.29.0"
regex = "1.10.4"
sea-orm = { version = "0.12.15", features = [
  "sqlx-sqlite",
  "runtime-tokio-rustls",
  "macros",
  "with-time",
] }
serde = { version = "1.0.197", features = ["derive"] }
time = { version = "0.3.34", features = ["serde"] }
tokio = { version = "1.37.0", features = [
  "rt-multi-thread",
  "macros",
  "fs",
  "signal",
] }
tokio-util = { version = "0.7.10", features = ["rt"] }
